changed temp units to metrics

--- a/templates/location_detail.html
+++ b/templates/location_detail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
     <img src="http://openweathermap.org/img/w/{{ location_data.icon }}.png" alt="Image">
     <ul>
         <li>City: {{ location_data.city }}</li>
-        <li>Temperature: {{ location_data.temperature }}</li>
+        <li>Temperature: {{ location_data.temperature }}C</li>
         <li>Conditions: {{ location_data.description }}</li>
         <!-- Include other location data fields here -->
     </ul>
