--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,15 @@
     <title>Weatherapp</title>
 </head>
 <body>
+    <h1> Welcome to the Weather App</h1>
     {% if user.is_authenticated %}
     <a href="{% url 'logout' %}">Logout</a>
     <h1>Welcome {{ user.username }}</h1>
     {% else %}
-    {% block login_link %}<a href="{% url 'login' %}">LOGIN</a>{% endblock %}    
+        {% block login_link %}
+        <a href="{% url 'login' %}">LOGIN</a>
+        <a href="{% url 'register' %}">REGISTER</a>
+        {% endblock %}         
     {% endif %}
     <div>{% block content%} {% endblock %}</div>
 </body>
